# truss-demo

./: README.md  client.py  exp.py  pyproject.toml
new_demo/: config.yaml
new_demo/model/: model.py
